# vietaku-api

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/: 20230419144137_create_animes.down.sql  20230419144137_create_animes.up.sql
src/: handler.rs  main.rs  model.rs  schema.rs
