[package]
name = "vietaku-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
diesel = { version = "2.0.3", default-features = false, features = ["postgres"] }
dotenv = "0.15.0"
